# cmdgen

./: .gitignore  readme.md
.circleci/: Dockerfile  Dockerfile.test  config.yml  docker.sh  dockerfile-test-entrypoint.sh
other/: cmdgen.xpr
other/examples/: foo-example.xml  git-example.xml  xsd-test-001.xml
other/xsd/: cmdgen.xsd
src/: CMakeLists.txt  main.cpp
src/example/: ArgSpecification.cpp  ArgSpecification.h  Command.cpp  CommandsOrArgs.cpp  CommandsOrArgs.h  Config.cpp  Config.h  RawArgs.cpp  RawArgs.h  main.cpp
src/lib/include/cmdgen/: ArgSpecification.h  ArgVal.h  Command.h  CommantType.h  Config.h  Error.h  MultiCommand.h  NamedLeafCommand.h  ParsedArgs.h  Placeholder.h  RawArgs.h  SimpleCommand.h  Typedef.h  parse.h
src/lib/include/cppcmd/: ArgSpecification.h  ArgVal.h  Command.h  CommandsOrArgs.h  CommantType.h  Config.h  Error.h  MultiCommand.h  NamedLeafCommand.h  ParsedArgs.h  RawArgs.h  SimpleCommand.h  Typedef.h  parse.h
src/lib/include/xjen/: Hello.h
src/lib/private/: ArgSpecification.cpp  ArgVal.cpp  Argument.h  Command.cpp  Command.h  CommandsOrArgs.cpp  Config.cpp  Config.h  Hello.cpp  MultiCommand.cpp  NamedLeafCommand.cpp  ParseArguments.cpp  ParseArguments.h  ParseCommands.h  ParseCommandsOrAguments.cpp  ParseCommandsOrArguments.h  ParseConfigRoot.cpp  ParseConfigRoot.h  ParseProgramElement.cpp  ParseProgramElement.h  ParsedArgs.cpp  Placeholder.cpp  ProgramElement.h  RawArgs.cpp  SimpleCommand.cpp  parse.cpp  parseArgs.cpp  parseArgs.h
src/lib/private/data/: Argument.h  CmdGen.h  Command.h  Config.h  Program.h  Type.h
src/lib/private/parse/: ParseArguments.cpp  ParseArguments.h  ParseCommands.cpp  ParseCommands.h  ParseCommandsOrArguments.h  ParseConfigRoot.cpp  ParseConfigRoot.h  ParseProgramElement.cpp  ParseProgramElement.h
src/lib/private/prototype/: FooArgumentParser.h  FooExample.h
src/test/: Files.h  FooExampleTest.cpp  HelloTest.cpp  ParseConfigRootTest.cpp  ParseGitExampleTest.cpp  ParsedArgsTest.cpp  PlaceholderTest.cpp  RawArgsTest.cpp  TestParseArgs.cpp  main.cpp
src/test/cmd/: MainTest.cpp
src/test/lib/: HelloTest.cpp
